recent hyperref do detect automatically the driver; by no specifying dvips we can use either pdflatex or latex

--- a/manual/input/input.tex
+++ b/manual/input/input.tex
@@ -26,7 +26,7 @@
 % along with this program; if not, write to the Free Software
 % Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-\documentclass[10pt,dvips]{report}
+\documentclass[10pt]{report}
 
 %\usepackage[pdftex]{graphicx}
 \usepackage[T1]{fontenc}
@@ -36,7 +36,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{bm}
-\usepackage[dvips,breaklinks=true,colorlinks=false]{hyperref}
+\usepackage[breaklinks=true,colorlinks=false]{hyperref}
 \usepackage{html}
 \usepackage{comment}
 \usepackage{moreverb}
