fix mis-documented feature (issue #51, noted by Richard Crozier)

--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -6092,7 +6092,7 @@ Deprecated in favour of the
 
     \bnt{joint_arglist} ::=
         \bnt{node_label} ,
-            [ \kw{position} , (\hty{Vec3}) \bnt{relative_offset} , ]
+            [ \kw{position} ] , (\hty{Vec3}) \bnt{relative_offset} ,
             [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation} , ]
             (\htybkw{ConstitutiveLaw}{6D}) \bnt{const_law}
 \end{Verbatim}
