WIP: adding inverse dynamics in documentation

--- a/manual/input/input.tex
+++ b/manual/input/input.tex
@@ -36,7 +36,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{bm}
-\usepackage[breaklinks=true,colorlinks=false]{hyperref}
+\usepackage[breaklinks=true,colorlinks=false,hidelinks]{hyperref}
 \usepackage{html}
 \usepackage{comment}
 \usepackage{moreverb}
