--- a/manual/tecman/tecman.tex
+++ b/manual/tecman/tecman.tex
@@ -34,7 +34,7 @@
 \usepackage{graphicx}
 \usepackage{psfrag}
 \usepackage{bm, amsmath, amsfonts, amssymb}
-\usepackage[breaklinks=true,colorlinks=false]{hyperref}
+\usepackage[breaklinks=true,colorlinks=false,hidelinks]{hyperref}
 \usepackage{html}
 \usepackage{comment}
 \usepackage{color}
