--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -6345,7 +6345,7 @@ which can be used as a starting point to build a custom module.
 
 \paragraph{Example.} \
 \begin{verbatim}
-    module load: "libmodule-template2"
+    module load: "libmodule-template2";
 
     user defined: 1000, template2, help;
 \end{verbatim}
