--- a/manual/input/controldata.tex
+++ b/manual/input/controldata.tex
@@ -681,6 +681,7 @@ The following counters can be defined:
 \item \kw{gravity}
 \item \kw{hydraulic elements}
 \item \kw{joints}
+\item \kw{joint regularizations}
 \item \kw{loadable elements}
 \item \kw{output elements}
 \item \kw{rigid bodies}
