--- a/manual/input/controldata.tex
+++ b/manual/input/controldata.tex
@@ -680,11 +680,12 @@ The following counters can be defined:
 \item \kw{genels}
 \item \kw{gravity}
 \item \kw{hydraulic elements}
+\item \kw{induced velocity elements}
+\item \kw{joint regularizations}
 \item \kw{joints}
 \item \kw{loadable elements}
 \item \kw{output elements}
 \item \kw{rigid bodies}
-\item \kw{induced velocity elements}
 \end{itemize}
 
 
